src/snapshots/venial__tests__parse_complex_attributes-3.snap
---
source: src/tests.rs
assertion_line: 338
expression: "struct_type.attributes()[1].get_single_path_segment()"
---
Some(
    Ident(
        hello,
    ),
)
