src/snapshots/venial__tests__parse_complex_enum_variant-2.snap
---
source: src/tests.rs
assertion_line: 534
expression: enum_type_2
---
Err(
    Error(
        "Complex values for enum variants are not supported unless they are between parentheses.",
    ),
)
