src/snapshots/venial__tests__parse_const_fn.snap
---
source: src/tests.rs
assertion_line: 547
expression: func
---
Function(
    Function {
        attributes: [],
        vis_marker: Some(
            pub,
        ),
        qualifiers: FunctionQualifiers {
            is_default: false,
            is_const: true,
            is_async: false,
            is_unsafe: false,
            is_extern: false,
            extern_abi: None,
        },
        name: Ident(
            const_fn,
        ),
        generic_params: None,
        params: [
            FunctionParameter {
                attributes: [],
                name: Ident(
                    b,
                ),
                ty: [
                    "f32",
                ],
            },
        ],
        where_clauses: None,
        return_ty: None,
        body: Some(
            Group {
                delimiter: Brace,
                stream: TokenStream [],
            },
        ),
    },
)
