src/snapshots/venial__tests__parse_const_fn_definitions.snap
---
source: src/tests.rs
expression: func
---
Function(
    Function {
        attributes: [],
        vis_marker: Some(
            pub,
        ),
        name: Ident(
            const_fn,
        ),
        generic_params: None,
        where_clauses: None,
        params: [
            FunctionParameter {
                attributes: [],
                name: Ident(
                    b,
                ),
                ty: [
                    "f32",
                ],
            },
        ],
        returns: None,
        abi: "Rust",
        is_unsafe: false,
        is_async: false,
        is_const: true,
    },
)
