src/snapshots/venial__tests__parse_const_generics.snap
---
source: src/tests.rs
assertion_line: 458
expression: struct_type
---
Struct(
    Struct {
        attributes: [],
        vis_marker: None,
        _struct: Ident(
            struct,
        ),
        name: Ident(
            Hello,
        ),
        generic_params: None,
        where_clauses: None,
        fields: Tuple(
            [
                TupleField {
                    attributes: [],
                    vis_marker: None,
                    ty: [
                        Array,
                        "<",
                        A,
                        ",",
                        Group {
                            delimiter: Brace,
                            stream: TokenStream [
                                Literal {
                                    lit: 123,
                                },
                                Punct {
                                    char: '+',
                                    spacing: Alone,
                                },
                                Group {
                                    delimiter: Parenthesis,
                                    stream: TokenStream [
                                        Literal {
                                            lit: 1,
                                        },
                                        Punct {
                                            char: ',',
                                            spacing: Alone,
                                        },
                                        Literal {
                                            lit: 2,
                                        },
                                        Punct {
                                            char: ',',
                                            spacing: Alone,
                                        },
                                        Literal {
                                            lit: 3,
                                        },
                                    ],
                                },
                            ],
                        },
                        ">",
                    ],
                },
                TupleField {
                    attributes: [],
                    vis_marker: None,
                    ty: [
                        B,
                        "<",
                        Group {
                            delimiter: Brace,
                            stream: TokenStream [
                                Literal {
                                    lit: 1,
                                },
                            ],
                        },
                        ",",
                        Group {
                            delimiter: Brace,
                            stream: TokenStream [
                                Literal {
                                    lit: 2,
                                },
                            ],
                        },
                        ">",
                    ],
                },
            ],
        ),
        _semicolon: Some(
            Punct {
                char: ';',
                spacing: Alone,
            },
        ),
    },
)
