src/snapshots/venial__tests__parse_constant_complex.snap
---
source: src/tests.rs
expression: const_decl
---
Constant(
    Constant {
        attributes: [
            Attribute {
                tk_hash: Punct {
                    char: '#',
                    spacing: Alone,
                },
                tk_brackets: [],
                path: [
                    attribute,
                ],
                value: Empty,
            },
        ],
        vis_marker: Some(
            pub(
                crate,
            ),
        ),
        tk_const_or_static: Ident(
            const,
        ),
        tk_mut: None,
        name: Ident(
            CONSTANT,
        ),
        tk_colon: Punct {
            char: ':',
            spacing: Alone,
        },
        ty: [
            some,
            ":",
            ":",
            complex,
            ":",
            ":",
            Type,
            "<",
            "'",
            static,
            ",",
            bool,
            ">",
        ],
        tk_equals: Some(
            Punct {
                char: '=',
                spacing: Alone,
            },
        ),
        initializer: Some(
            [
                some,
                ":",
                ":",
                complex,
                ":",
                ":",
                Expr,
                "+",
                77,
            ],
        ),
        tk_semicolon: Punct {
            char: ';',
            spacing: Alone,
        },
    },
)
