src/snapshots/venial__tests__parse_constant_expressionless.snap
---
source: src/tests.rs
expression: const_decl
---
Constant(
    Constant {
        attributes: [],
        vis_marker: None,
        tk_const: Ident(
            const,
        ),
        name: Ident(
            CONSTANT,
        ),
        tk_colon: Punct {
            char: ':',
            spacing: Alone,
        },
        ty: [
            some,
            ":",
            ":",
            Type,
        ],
        tk_equals: None,
        initializer: None,
        tk_semicolon: Punct {
            char: ';',
            spacing: Alone,
        },
    },
)
